# shapedcloud

./: .gitattributes  .gitignore  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/scvx-core/: Cargo.toml
crates/scvx-core/src/: lib.rs  params.rs  status.rs  types.rs
crates/scvx-dynamics/: Cargo.toml
crates/scvx-dynamics/src/: continuous.rs  discretize.rs  forward.rs  jacobian.rs  lib.rs
crates/scvx-ffi/: Cargo.toml  INTEGRATION.md
crates/scvx-ffi/include/: scvx_ffi.h
crates/scvx-ffi/src/: lib.rs
crates/scvx-ipm/: Cargo.toml
crates/scvx-ipm/src/: block_tridiag.rs  cone.rs  kkt.rs  lib.rs  mehrotra.rs  socp.rs
crates/scvx-solver/: Cargo.toml
crates/scvx-solver/examples/: mars_descent.rs
crates/scvx-solver/src/: api.rs  assemble.rs  lib.rs  precondition.rs  reduced_kkt.rs  scvx.rs  structured_socp.rs  trust.rs
crates/scvx-solver/tests/: oracle_diff.rs  oracle_scvx_subproblem.rs  wcet_benchmarks.rs
tools/jl-oracle/: Manifest.toml  Project.toml  setup.jl  smoke.jl  solve_canonical.jl  solve_scvx_subproblem.jl
tools/oracle-data/: scvx_fixedtf.txt  scvx_freetf.txt
tools/py-oracle/: .gitignore  solve_canonical.py  solve_scvx_subproblem.py
