[package]
name         = "scvx-dynamics"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }

[dependencies]
scvx-core = { workspace = true }
nalgebra  = { workspace = true }
libm      = { workspace = true }
